<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/about" />


        <item
            android:id="@+id/nav_charitable"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/charitable_organizations" />



    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_half_black_24dp"
                android:title="@string/rate_s" />

        </menu>
    </item>

    <item android:title="@string/sign_out">
        <menu>
            <item
                android:id="@+id/nav_out"
                android:icon="@drawable/ic_menu_out"
                android:title="@string/sign_out" />


        </menu>
    </item>

</menu>