<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".About"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_linear"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="4dp"

                android:src="@drawable/help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:text="@string/about_text"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follow_us_text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:layout_below="@id/about_linear"
            android:layout_centerHorizontal="true"

            android:text="@string/follow_us"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="4dp"
            android:gravity="center"
            android:layout_below="@id/follow_us_text"
            android:orientation="horizontal">

            <ImageView
                style="@style/Image"
                android:id="@+id/fb"
                android:layout_weight="1"
                android:src="@drawable/fb_logo"
                android:text="@string/facebook"
                />

            <ImageView
                style="@style/Image"
                android:id="@+id/twitt"
                android:layout_weight="1"
                android:src="@drawable/twitter_logo"
                android:text="@string/twitter"
                />

            <ImageView
                style="@style/Image"
                android:id="@+id/insta"
                android:layout_weight="1"
                android:src="@drawable/dee"
                android:text="@string/instagram"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

