<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryActivity"
    android:background="#d7e2e4

">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/b" />



    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/org_image1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/imageview">
    </ImageView>

    <TextView
        android:id="@+id/org_name1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:textColor="#0f355a"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/org_image1"
        android:layout_below="@+id/imageview"/>

    <ImageView
        android:src="@drawable/web"
        android:id="@+id/website1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/org_image1"
        />

    <ImageView
        android:src="@drawable/f"
        android:id="@+id/website1_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1"
        android:text="@string/facebook" />

    <ImageView
        android:src="@drawable/donatee"
        android:id="@+id/website1_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1_2"
        android:text="@string/donate" />




    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/org_image2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/org_image1">
    </ImageView>

    <TextView
        android:id="@+id/org_name2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:textColor="#0f355a"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/org_image2"
        android:layout_below="@+id/website1"/>

    <ImageView
        android:id="@+id/website2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/org_image2"
        android:src="@drawable/web" />

    <ImageView
        android:id="@+id/website2_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1"
        android:src="@drawable/f" />

    <ImageView
        android:id="@+id/website2_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1_2"
        android:src="@drawable/donatee" />


    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/org_image3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/org_image2">
    </ImageView>

    <TextView
        android:id="@+id/org_name3"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:textColor="#0f355a"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/org_image3"
        android:layout_below="@+id/website2"/>

    <ImageView
        android:id="@+id/website3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/org_image3"
        android:src="@drawable/web" />

    <ImageView
        android:id="@+id/website3_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1"
        android:src="@drawable/f"/>

    <ImageView
        android:id="@+id/website3_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1_2"
        android:src="@drawable/donatee" />

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/org_image4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/org_image3">
    </ImageView>

    <TextView
        android:id="@+id/org_name4"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:textColor="#0f355a"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/org_image4"
        android:layout_below="@+id/website3"/>

    <ImageView
        android:id="@+id/website4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name4"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/org_image4"
        android:src="@drawable/web" />

    <ImageView

        android:id="@+id/website4_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name4"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1"
        android:src="@drawable/f" />

    <ImageView
        android:id="@+id/website4_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name4"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1_2"
        android:src="@drawable/donatee" />



    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/org_image5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/org_image4">
    </ImageView>

    <TextView
        android:id="@+id/org_name5"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:textColor="#0f355a"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/org_image1"
        android:layout_below="@+id/website4"/>

    <ImageView
        android:id="@+id/website5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name5"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/org_image1"
        android:src="@drawable/web" />

    <ImageView
        android:id="@+id/website5_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name5"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1"
        android:src="@drawable/f"/>

    <ImageView
        android:id="@+id/website5_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/org_name5"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/website1_2"
        android:src="@drawable/donatee" />


</RelativeLayout>